# PvZ-XPort

./: .gitmodules  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.agents/skills/testing-pvz-xport-cmake/: SKILL.md
.agents/skills/testing-resource-manager/: SKILL.md
.agents/skills/testing-resource-packing/: SKILL.md
android/app/: build.gradle
android/app/src/main/java/io/github/wszqkzqk/pvzportable/: PvZPortableActivity.java
archlinux/: PKGBUILD
resources/: resource-pack.json
scripts/: convert-pvz-icons.py  extract-pvz-icon.py
src/: Resources.cpp  Resources.h  main.cpp
src/Lawn/Widget/: TitleScreen.cpp  TitleScreen.h
src/Sexy.TodLib/: Definition.cpp  TodCommon.cpp
src/SexyAppFramework/: SexyAppBase.cpp  SexyAppBase.h
src/SexyAppFramework/graphics/: Graphics.cpp
src/SexyAppFramework/sound/SDL-Mixer-X/cmake/: libSDL2.cmake
tools/: pack_resources.py
wasm/: shell.html
